--- a/projects/shell1/src/styles.scss
+++ b/projects/shell1/src/styles.scss
@@ -1,4 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+/* Importing Tailwind's base styles */
 @tailwind base;
+
+/* Importing Tailwind's component styles */
 @tailwind components;
+
+/* Importing Tailwind's utility styles */
 @tailwind utilities;
